--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ a:focus,button:focus,input:focus,select:focus,textarea:focus{outline:2px solid v
 .container{max-width:1180px;margin:0 auto;padding:0 20px}
 
 /* NAV */
-.topbar{position:sticky;top:0;z-index:50;background:#fff;border-bottom:1px solid var(--line)}
+.topbar{position:sticky;top:0;z-index:50;background:#fff;border-bottom:1px solid var(--line);box-shadow:0 2px 10px rgba(0,0,0,.05)}
 .topbar .inner{display:flex;align-items:center;justify-content:space-between;padding:10px 0}
 .brand{display:flex;align-items:center;gap:12px}
 .brand img{height:var(--logoH);width:auto;display:block;object-fit:contain}
@@ -49,17 +49,16 @@ a:focus,button:focus,input:focus,select:focus,textarea:focus{outline:2px solid v
 .menu-toggle svg{display:block}
 
 /* BUTTONS */
-.btn{display:inline-block;padding:12px 18px;border-radius:12px;font-weight:700;border:2px solid var(--brand);transition:.18s;white-space:nowrap}
-.btn.primary{background:var(--brand);color:#fff}
-.btn.primary:hover{background:var(--brand-2);border-color:var(--brand-2)}
-.btn.ghost{background:#fff;color:var(--brand)}
+.btn{display:inline-block;padding:12px 20px;border-radius:12px;font-weight:700;border:2px solid var(--brand);transition:.25s;white-space:nowrap}
+.btn.primary{background:linear-gradient(90deg,var(--brand),var(--brand-2));color:#fff;border:none;box-shadow:0 4px 14px rgba(111,58,255,.3)}
+.btn.primary:hover{filter:brightness(1.1)}
+.btn.ghost{background:#fff;color:var(--brand);border:2px solid var(--brand)}
 .btn.ghost:hover{background:#f3efff}
 
 /* HERO */
-.hero{padding:90px 0 50px;background:
-  radial-gradient(900px 300px at 50% -120px, rgba(111,58,255,.12), transparent 60%),#fff}
+.hero{padding:90px 0 60px;background:linear-gradient(160deg,#f9f6ff 0%,#fff 100%)}
 .hero-grid{display:grid;grid-template-columns:1.05fr 1fr;gap:36px;align-items:center}
-h1{font-size:clamp(28px, 6vw, 52px);line-height:1.06;letter-spacing:-.4px;margin:0 0 10px}
+h1{font-size:clamp(30px, 6vw, 56px);line-height:1.06;letter-spacing:-.4px;margin:0 0 10px}
 .lead{font-size:18px;color:var(--muted);max-width:720px;margin:0 0 20px}
 
 /* MOCKUP */
@@ -69,67 +68,54 @@ h1{font-size:clamp(28px, 6vw, 52px);line-height:1.06;letter-spacing:-.4px;margin
   max-width: 100%;
   height: auto;
   display:block;
-  border-radius:20px;
-  box-shadow:0 18px 40px rgba(0,0,0,.12);
+  border-radius:22px;
+  box-shadow:0 20px 50px rgba(111,58,255,.2);
 }
 
 /* SECTIONS */
-.section{padding:68px 0}
+.section{padding:70px 0}
 .band{background:var(--paper);border-top:1px solid var(--line);border-bottom:1px solid var(--line)}
-.section h2{text-align:center;color:#1a1d33;font-size:clamp(22px,3.5vw,34px);letter-spacing:-.3px;margin:0 0 10px}
-.section p.sub{color:var(--muted);text-align:center;margin:0 auto 12px;max-width:760px}
+.section h2{text-align:center;color:#1a1d33;font-size:clamp(24px,3.5vw,36px);letter-spacing:-.3px;margin:0 0 12px}
+.section p.sub{color:var(--muted);text-align:center;margin:0 auto 14px;max-width:760px}
 
 /* CARDS */
-.grid-3{display:grid;grid-template-columns:repeat(3,1fr);gap:16px;margin-top:16px}
-.grid-2{display:grid;grid-template-columns:repeat(2,1fr);gap:16px;margin-top:16px}
-.card{padding:22px;border-radius:16px;border:1px solid var(--line);background:#fff;box-shadow:0 4px 14px rgba(0,0,0,.04);transition:.2s}
-.card:hover{transform:translateY(-4px);box-shadow:0 8px 20px rgba(0,0,0,.08)}
-.card h3{margin:0 0 6px;font-size:18px}
+.grid-3{display:grid;grid-template-columns:repeat(3,1fr);gap:18px;margin-top:20px}
+.grid-2{display:grid;grid-template-columns:repeat(2,1fr);gap:18px;margin-top:20px}
+.card{padding:22px;border-radius:16px;border:1px solid var(--line);background:#fff;box-shadow:0 6px 18px rgba(0,0,0,.05);transition:.25s}
+.card:hover{transform:translateY(-4px);box-shadow:0 12px 24px rgba(111,58,255,.15)}
+.card h3{margin:0 0 8px;font-size:18px;color:#1a1d33}
 .card p{margin:0;color:#464b63;font-size:15px}
 
 /* PLANOS */
-.plans{display:grid;grid-template-columns:repeat(auto-fit,minmax(280px,1fr));gap:20px;margin-top:32px}
-.plan-card{border:2px solid var(--line);border-radius:16px;padding:28px;text-align:center;background:#fff;box-shadow:0 4px 14px rgba(0,0,0,.05);transition:.25s}
-.plan-card:hover{border-color:var(--brand);transform:translateY(-6px)}
-.plan-card h3{margin:0;font-size:20px;color:#1a1d33}
-.plan-card .price{font-size:26px;font-weight:900;color:var(--brand);margin:14px 0}
-.plan-card ul{list-style:none;padding:0;margin:0 0 16px}
-.plan-card ul li{margin:8px 0;color:#444}
-.plan-card .btn{width:100%}
-.plan-card.recommended{border-color:var(--brand);background:linear-gradient(180deg,#fff,#f9f6ff)}
-.plan-card .tag{display:inline-block;padding:4px 10px;border-radius:999px;background:var(--brand);color:#fff;font-size:12px;margin-bottom:10px}
+.plan-box{margin-top:28px;display:grid;grid-template-columns:repeat(auto-fit,minmax(280px,1fr));gap:18px}
+.plan{background:#fff;border:2px solid var(--accent-strong);border-radius:16px;padding:22px;text-align:center;box-shadow:0 6px 20px rgba(0,0,0,.05)}
+.plan h3{margin:0;font-size:20px}
+.plan .price{font-size:26px;font-weight:900;color:var(--brand);margin:14px 0}
+.plan ul{list-style:none;padding:0;margin:0;text-align:left}
+.plan ul li{margin:6px 0;display:flex;align-items:center;gap:8px;font-size:15px}
+.plan ul li::before{content:"✔";color:green}
+.plan .btn{margin-top:14px;display:block;width:100%}
 
 /* FORM */
-.form-box{max-width:600px;margin:0 auto;background:#fff;padding:32px;border-radius:18px;box-shadow:0 8px 28px rgba(0,0,0,.06)}
-.form-box h3{text-align:center;margin-bottom:20px}
-.form-box .input{width:100%;padding:14px 16px;margin-bottom:14px;border-radius:12px;border:1px solid var(--line);font-size:15px}
-.form-box button{width:100%}
+form{max-width:600px;margin:0 auto;display:flex;flex-direction:column;gap:12px}
+.input{padding:14px 16px;border:1px solid var(--line);border-radius:10px;font-size:15px}
+form button{margin-top:6px}
 
-/* MOBILE */
-@media (max-width:980px){
-  .hero-grid{grid-template-columns:1fr}
-  .mockup img{ width: min(86vw, 330px); }
-  .grid-3,.grid-2{grid-template-columns:1fr}
-  .menu-toggle{display:block}
-  .nav-links{display:none;position:absolute;left:0;right:0;top:calc(100% + 1px);background:#fff;border-top:1px solid var(--line);padding:10px 20px;box-shadow:0 10px 30px rgba(0,0,0,.06)}
-  .nav-links.open{display:flex;flex-direction:column;gap:12px}
-  .nav-links .btn.primary{width:100%;text-align:center}
-}
+/* FOOTER */
+footer{background:#1b133a;color:#aaa;text-align:center;padding:28px 20px}
+footer a{color:#ddd}
+footer a:hover{color:#fff}
 </style>
 </head>
 <body>
 <!-- NAV -->
 <div class="topbar">
   <div class="container inner">
-    <a class="brand" href="#">
-      <img src="assets/logo-purple.PNG" alt="Logo do MatchWork" loading="lazy" decoding="async">
-    </a>
+    <a class="brand" href="#"><img src="assets/logo-purple.PNG" alt="Logo MatchWork" loading="lazy"></a>
     <button class="menu-toggle" aria-label="Abrir menu" aria-expanded="false">
-      <svg width="22" height="22" viewBox="0 0 24 24" fill="none">
-        <path d="M3 6h18M3 12h18M3 18h18" stroke="#3b3b3b" stroke-width="2" stroke-linecap="round"/>
-      </svg>
+      <svg width="22" height="22" viewBox="0 0 24 24"><path d="M3 6h18M3 12h18M3 18h18" stroke="#3b3b3b" stroke-width="2" stroke-linecap="round"/></svg>
     </button>
-    <nav class="nav-links" aria-label="principal">
+    <nav class="nav-links">
       <a href="#o-que-faz">O que faz</a>
       <a href="#como-funciona">Como funciona</a>
       <a href="#bemplus">Bem+Match</a>
@@ -145,19 +131,17 @@ h1{font-size:clamp(28px, 6vw, 52px);line-height:1.06;letter-spacing:-.4px;margin
     <div>
       <h1>Contratar, evoluir e acompanhar o mercado em um só lugar.</h1>
       <p class="lead">
-        O <b>MatchWork</b> conecta <b>empresas</b>, <b>candidatos em busca ativa</b> e <b>profissionais já empregados</b>.
-        Empresas publicam vagas e recebem <b>matches qualificados</b> em minutos — sem triagem infinita.
-        Profissionais podem <b>buscar oportunidades</b>, <b>se capacitar</b>, contar com <b>Bem+Match</b>, fazer <b>networking</b>
-        e acompanhar tendências de <b>salários e cargos</b>.
+        O <b>MatchWork</b> conecta <b>empresas</b>, <b>candidatos</b> e <b>profissionais</b>.
+        Empresas publicam vagas e recebem <b>matches qualificados</b> em minutos.  
+        Profissionais podem <b>buscar oportunidades</b>, <b>se capacitar</b>, usar o <b>Bem+Match</b>, fazer <b>networking</b>
+        e acompanhar tendências do mercado.
       </p>
       <div style="display:flex;gap:10px;flex-wrap:wrap">
-        <a class="btn primary" href="#planos-empresas">Sou empresa</a>
-        <a class="btn ghost" href="#planos-candidato">Sou candidato/profissional</a>
+        <a class="btn primary" href="#planos">Sou empresa</a>
+        <a class="btn ghost" href="#planos">Sou candidato</a>
       </div>
     </div>
-    <div class="mockup">
-      <img src="assets/mockup.PNG" alt="Mockup do app MatchWork mostrando interface de like/dislike">
-    </div>
+    <div class="mockup"><img src="assets/mockup.PNG" alt="Mockup MatchWork"></div>
   </div>
 </header>
 
@@ -199,91 +183,42 @@ h1{font-size:clamp(28px, 6vw, 52px);line-height:1.06;letter-spacing:-.4px;margin
   </div>
 </section>
 
-<!-- GAMIFICAÇÃO -->
-<section id="gamificacao" class="section">
-  <div class="container">
-    <h2>Gamificação (MatchPoints)</h2>
-    <p class="sub">Pontos simples para incentivar evolução contínua e engajamento.</p>
-    <div class="grid-2">
-      <div class="card"><h3>Como ganhar</h3>
-        <ul><li>Completar perfil e testes</li><li>Aplicar a vagas</li><li>Concluir trilhas</li><li>Manter streaks</li></ul>
-      </div>
-      <div class="card"><h3>Como usar</h3>
-        <ul><li>Destaque no app</li><li>Acesso a microcertificações</li><li>Benefícios exclusivos</li></ul>
-      </div>
-    </div>
-  </div>
-</section>
-
 <!-- PLANOS -->
 <section id="planos" class="section">
   <div class="container">
-    <h2>Planos focados em preencher vagas e evoluir carreiras</h2>
+    <h2>Planos para empresas e candidatos</h2>
     <p class="sub">Escolha o formato ideal. Sem burocracia, sem multa escondida.</p>
-
-    <div class="plans" id="planos-empresas">
-      <div class="plan-card">
+    <div class="plan-box">
+      <div class="plan">
         <h3>Gratuito</h3>
         <div class="price">R$ 0</div>
-        <ul>
-          <li>1 vaga ativa</li>
-          <li>5 perfis sugeridos (parcial)</li>
-          <li>Sem banco de talentos</li>
-        </ul>
-        <a href="#contato" class="btn ghost">Começar</a>
+        <ul><li>1 vaga ativa</li><li>5 perfis sugeridos</li><li>7 dias de duração</li></ul>
+        <a class="btn ghost" href="#contato">Começar</a>
       </div>
-      <div class="plan-card recommended">
-        <span class="tag">Mais escolhido</span>
+      <div class="plan" style="border:2px solid var(--brand)">
+        <h3>One-Shot</h3>
+        <div class="price">R$ 400 / vaga</div>
+        <ul><li>1 vaga até ser preenchida</li><li>Perfis ilimitados</li><li>Contato completo</li></ul>
+        <a class="btn primary" href="#contato">Contratar</a>
+      </div>
+      <div class="plan">
         <h3>Assinatura</h3>
         <div class="price">R$ 150/mês</div>
-        <ul>
-          <li>Vagas ilimitadas</li>
-          <li>Perfis ilimitados (completo)</li>
-          <li>Acesso ao Banco de Talentos</li>
-        </ul>
-        <a href="#contato" class="btn primary">Assinar agora</a>
+        <ul><li>Vagas ilimitadas</li><li>Banco de talentos</li><li>Perfis ilimitados</li></ul>
+        <a class="btn ghost" href="#contato">Assinar</a>
       </div>
-      <div class="plan-card">
-        <h3>One-Shot</h3>
-        <div class="price">R$ 400/vaga</div>
-        <ul>
-          <li>1 vaga até ser preenchida (ou 3 meses)</li>
-          <li>Perfis ilimitados (completo)</li>
-          <li>Sem banco de talentos</li>
-        </ul>
-        <a href="#contato" class="btn ghost">Contratar</a>
-      </div>
-    </div>
-
-    <h2 style="margin-top:60px">Planos para candidatos</h2>
-    <div class="plans" id="planos-candidato">
-      <div class="plan-card">
-        <h3>Gratuito</h3>
-        <div class="price">R$ 0</div>
-        <ul>
-          <li>Acesso às vagas</li>
-          <li>Participação nos testes</li>
-          <li>Capacitação básica</li>
-        </ul>
-        <a href="#contato" class="btn ghost">Começar</a>
-      </div>
-      <div class="plan-card recommended">
-        <span class="tag">Recomendado</span>
-        <h3>Premium</h3>
+      <div class="plan">
+        <h3>Premium Candidato</h3>
         <div class="price">R$ 14,90/mês</div>
-        <ul>
-          <li>Acesso prioritário às vagas</li>
-          <li>Destaque nos resultados</li>
-          <li>Relatório completo de carreira</li>
-        </ul>
-        <a href="#contato" class="btn primary">Assinar agora</a>
+        <ul><li>Destaque nas vagas</li><li>Relatório de carreira</li><li>Acesso prioritário</li></ul>
+        <a class="btn primary" href="#contato">Assinar</a>
       </div>
     </div>
   </div>
 </section>
 
 <!-- SEGURANÇA -->
-<section class="section">
+<section class="section band">
   <div class="container">
     <h2>Segurança e conformidade</h2>
     <p class="sub">O MatchWork segue a <b>LGPD</b> e mantém dados em ambiente seguro.</p>
@@ -297,36 +232,32 @@ h1{font-size:clamp(28px, 6vw, 52px);line-height:1.06;letter-spacing:-.4px;margin
 <!-- CONTATO -->
 <section id="contato" class="section">
   <div class="container">
-    <div class="form-box">
-      <h3>Fale com a gente</h3>
-      <form action="https://formsubmit.co/contato@appmatchwork.com.br" method="POST">
-        <input class="input" name="nome" placeholder="Seu nome" required>
-        <input class="input" type="email" name="email" placeholder="E-mail" required>
-        <select class="input" name="perfil" required>
-          <option value="" disabled selected>Sou...</option>
-          <option value="empresa">Empresa</option>
-          <option value="candidato">Candidato ativo</option>
-          <option value="profissional">Profissional empregado</option>
-        </select>
-        <textarea class="input" name="mensagem" rows="4" placeholder="Sua mensagem" required></textarea>
-        <button class="btn primary" type="submit">Enviar mensagem</button>
-      </form>
-    </div>
+    <h2 style="text-align:center">Fale com a gente</h2>
+    <form action="https://formsubmit.co/contato@appmatchwork.com.br" method="POST">
+      <input class="input" name="nome" placeholder="Seu nome" required>
+      <input class="input" type="email" name="email" placeholder="E-mail" required>
+      <select class="input" name="perfil" required>
+        <option value="" disabled selected>Sou...</option>
+        <option value="empresa">Empresa</option>
+        <option value="candidato">Candidato ativo</option>
+        <option value="profissional">Profissional empregado</option>
+      </select>
+      <textarea class="input" name="mensagem" rows="4" placeholder="Sua mensagem" required></textarea>
+      <button class="btn primary" type="submit">Enviar</button>
+    </form>
   </div>
 </section>
 
 <!-- FOOTER -->
-<footer class="section" style="text-align:center;padding:26px 0;border-top:1px solid var(--line);color:#71779a">
-  © 2025 MatchWork — Indaial/SC • 
-  <a href="terms.html">Termos</a> • <a href="privacy.html">Privacidade</a>
-  <div class="social-icons" style="margin-top:14px;display:flex;justify-content:center;gap:20px">
-    <a href="https://www.instagram.com/matchwork.oficial" target="_blank" aria-label="Instagram">Instagram</a>
-    <a href="https://www.linkedin.com/company/matchworkoficial/" target="_blank" aria-label="LinkedIn">LinkedIn</a>
-  </div>
+<footer>
+  <p>© 2025 MatchWork — Indaial/SC • <a href="terms.html">Termos</a> • <a href="privacy.html">Privacidade</a></p>
+  <p>
+    <a href="https://www.instagram.com/matchwork.oficial" target="_blank">Instagram</a> •
+    <a href="https://www.linkedin.com/company/matchworkoficial/" target="_blank">LinkedIn</a>
+  </p>
 </footer>
 
 <script>
-/* Menu mobile */
 const toggle=document.querySelector('.menu-toggle'),links=document.querySelector('.nav-links');
 if(toggle&&links){
   toggle.addEventListener('click',()=>{const open=links.classList.toggle('open');toggle.setAttribute('aria-expanded',open?'true':'false')});
