--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <meta property="og:image" content="assets/logo-purple.PNG">
 <meta property="og:url" content="https://appmatchwork.com.br/">
 
-<!-- Google tag (gtag.js) – GA4 -->
+<!-- Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-BWLCFPYQ7J"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
@@ -29,7 +29,6 @@
   --bg:#fff; --ink:#121426; --muted:#646b86; --line:#e9e9f2;
   --brand:#6f3aff; --brand-2:#8a67ff; --paper:#f8f7ff;
   --accent:#efe9ff; --accent-strong:#e8e0ff;
-  --logoH: clamp(56px, 7.2vw, 80px);
 }
 *{box-sizing:border-box}
 html{scroll-behavior:smooth}
@@ -39,26 +38,26 @@ a:focus,button:focus,input:focus,select:focus,textarea:focus{outline:2px solid v
 .container{max-width:1180px;margin:0 auto;padding:0 20px}
 
 /* NAV */
-.topbar{position:sticky;top:0;z-index:50;background:#fff;border-bottom:1px solid var(--line);box-shadow:0 2px 10px rgba(0,0,0,.05)}
+.topbar{position:sticky;top:0;z-index:50;background:#fff;border-bottom:1px solid var(--line)}
 .topbar .inner{display:flex;align-items:center;justify-content:space-between;padding:10px 0}
 .brand{display:flex;align-items:center;gap:12px}
-.brand img{height:var(--logoH);width:auto;display:block;object-fit:contain}
+.brand img{height:56px;width:auto;display:block;object-fit:contain}
 .nav-links{display:flex;align-items:center;gap:18px}
 .nav-links a{font-weight:600;color:#1b1f3a}
 .menu-toggle{display:none;border:1px solid var(--line);background:#fff;border-radius:10px;padding:8px 10px;cursor:pointer}
 .menu-toggle svg{display:block}
 
 /* BUTTONS */
-.btn{display:inline-block;padding:12px 20px;border-radius:12px;font-weight:700;border:2px solid var(--brand);transition:.25s;white-space:nowrap}
-.btn.primary{background:linear-gradient(90deg,var(--brand),var(--brand-2));color:#fff;border:none;box-shadow:0 4px 14px rgba(111,58,255,.3)}
-.btn.primary:hover{filter:brightness(1.1)}
-.btn.ghost{background:#fff;color:var(--brand);border:2px solid var(--brand)}
+.btn{display:inline-block;padding:12px 18px;border-radius:12px;font-weight:700;border:2px solid var(--brand);transition:.18s;white-space:nowrap}
+.btn.primary{background:var(--brand);color:#fff}
+.btn.primary:hover{background:var(--brand-2);border-color:var(--brand-2)}
+.btn.ghost{background:#fff;color:var(--brand)}
 .btn.ghost:hover{background:#f3efff}
 
 /* HERO */
-.hero{padding:90px 0 60px;background:linear-gradient(160deg,#f9f6ff 0%,#fff 100%)}
+.hero{padding:90px 0 50px;background:radial-gradient(900px 300px at 50% -120px, rgba(111,58,255,.12), transparent 60%),#fff}
 .hero-grid{display:grid;grid-template-columns:1.05fr 1fr;gap:36px;align-items:center}
-h1{font-size:clamp(30px, 6vw, 56px);line-height:1.06;letter-spacing:-.4px;margin:0 0 10px}
+h1{font-size:clamp(28px, 6vw, 52px);line-height:1.06;letter-spacing:-.4px;margin:0 0 10px}
 .lead{font-size:18px;color:var(--muted);max-width:720px;margin:0 0 20px}
 
 /* MOCKUP */
@@ -68,53 +67,61 @@ h1{font-size:clamp(30px, 6vw, 56px);line-height:1.06;letter-spacing:-.4px;margin
   max-width: 100%;
   height: auto;
   display:block;
-  border-radius:22px;
-  box-shadow:0 20px 50px rgba(111,58,255,.2);
+  border-radius:20px;
+  box-shadow:0 18px 40px rgba(0,0,0,.12);
 }
 
 /* SECTIONS */
-.section{padding:70px 0}
+.section{padding:68px 0}
 .band{background:var(--paper);border-top:1px solid var(--line);border-bottom:1px solid var(--line)}
-.section h2{text-align:center;color:#1a1d33;font-size:clamp(24px,3.5vw,36px);letter-spacing:-.3px;margin:0 0 12px}
-.section p.sub{color:var(--muted);text-align:center;margin:0 auto 14px;max-width:760px}
+.section h2{text-align:center;color:#1a1d33;font-size:clamp(22px,3.5vw,34px);margin:0 0 10px}
+.section p.sub{color:var(--muted);text-align:center;margin:0 auto 12px;max-width:760px}
 
 /* CARDS */
-.grid-3{display:grid;grid-template-columns:repeat(3,1fr);gap:18px;margin-top:20px}
-.grid-2{display:grid;grid-template-columns:repeat(2,1fr);gap:18px;margin-top:20px}
-.card{padding:22px;border-radius:16px;border:1px solid var(--line);background:#fff;box-shadow:0 6px 18px rgba(0,0,0,.05);transition:.25s}
-.card:hover{transform:translateY(-4px);box-shadow:0 12px 24px rgba(111,58,255,.15)}
-.card h3{margin:0 0 8px;font-size:18px;color:#1a1d33}
+.grid-3{display:grid;grid-template-columns:repeat(3,1fr);gap:16px;margin-top:16px}
+.grid-2{display:grid;grid-template-columns:repeat(2,1fr);gap:16px;margin-top:16px}
+.card{padding:18px;border-radius:14px;border:1px solid var(--line);background:#fff;box-shadow:0 2px 10px rgba(0,0,0,.03)}
+.card h3{margin:0 0 6px;font-size:18px}
 .card p{margin:0;color:#464b63;font-size:15px}
 
 /* PLANOS */
-.plan-box{margin-top:28px;display:grid;grid-template-columns:repeat(auto-fit,minmax(280px,1fr));gap:18px}
-.plan{background:#fff;border:2px solid var(--accent-strong);border-radius:16px;padding:22px;text-align:center;box-shadow:0 6px 20px rgba(0,0,0,.05)}
-.plan h3{margin:0;font-size:20px}
-.plan .price{font-size:26px;font-weight:900;color:var(--brand);margin:14px 0}
-.plan ul{list-style:none;padding:0;margin:0;text-align:left}
-.plan ul li{margin:6px 0;display:flex;align-items:center;gap:8px;font-size:15px}
-.plan ul li::before{content:"✔";color:green}
-.plan .btn{margin-top:14px;display:block;width:100%}
+.plan-note{background:#f5f3ff;border:1px dashed #cabfff;color:#2c2466;padding:12px 14px;border-radius:12px;text-align:center;margin-top:10px;font-size:14px}
+.table-box{margin-top:20px}
+.table-box h3{text-align:center;margin-bottom:16px}
+.compare{width:100%;border-collapse:collapse}
+.compare th,.compare td{border:1px solid var(--line);padding:12px 14px;font-size:14px;text-align:center}
+.compare th{background:#f1ecff;color:#2c2466}
+.price-row td{font-weight:700;color:var(--brand)}
 
-/* FORM */
-form{max-width:600px;margin:0 auto;display:flex;flex-direction:column;gap:12px}
-.input{padding:14px 16px;border:1px solid var(--line);border-radius:10px;font-size:15px}
-form button{margin-top:6px}
+/* CONTACT FORM */
+.form{display:flex;flex-direction:column;gap:12px;max-width:600px;margin:0 auto}
+.input{padding:12px 14px;border:1px solid var(--line);border-radius:10px;font-size:15px}
+button.btn.primary{cursor:pointer}
 
 /* FOOTER */
-footer{background:#1b133a;color:#aaa;text-align:center;padding:28px 20px}
-footer a{color:#ddd}
-footer a:hover{color:#fff}
+footer{border-top:1px solid var(--line);color:#71779a;text-align:center;padding:26px 0}
+
+/* MOBILE */
+@media (max-width:980px){
+  .hero-grid{grid-template-columns:1fr;text-align:center}
+  .mockup{margin-top:20px}
+  .grid-3,.grid-2{grid-template-columns:1fr}
+  .nav-links{display:none;flex-direction:column;gap:12px;background:#fff;position:absolute;left:0;right:0;top:calc(100% + 1px);padding:12px 20px;border-top:1px solid var(--line)}
+  .nav-links.open{display:flex}
+  .menu-toggle{display:block}
+  .compare thead{display:none}
+  .compare tr{display:block;margin-bottom:14px;border:1px solid var(--line);border-radius:12px;padding:12px;text-align:left}
+  .compare td{display:block;border:none;padding:6px 0}
+  .compare td:first-child{font-weight:700;color:#1a1d33}
+}
 </style>
 </head>
 <body>
 <!-- NAV -->
 <div class="topbar">
   <div class="container inner">
-    <a class="brand" href="#"><img src="assets/logo-purple.PNG" alt="Logo MatchWork" loading="lazy"></a>
-    <button class="menu-toggle" aria-label="Abrir menu" aria-expanded="false">
-      <svg width="22" height="22" viewBox="0 0 24 24"><path d="M3 6h18M3 12h18M3 18h18" stroke="#3b3b3b" stroke-width="2" stroke-linecap="round"/></svg>
-    </button>
+    <a class="brand" href="#"><img src="assets/logo-purple.PNG" alt="MatchWork Logo"></a>
+    <button class="menu-toggle" aria-label="Menu"><svg width="22" height="22" viewBox="0 0 24 24"><path d="M3 6h18M3 12h18M3 18h18" stroke="#3b3b3b" stroke-width="2" stroke-linecap="round"/></svg></button>
     <nav class="nav-links">
       <a href="#o-que-faz">O que faz</a>
       <a href="#como-funciona">Como funciona</a>
@@ -131,17 +138,15 @@ footer a:hover{color:#fff}
     <div>
       <h1>Contratar, evoluir e acompanhar o mercado em um só lugar.</h1>
       <p class="lead">
-        O <b>MatchWork</b> conecta <b>empresas</b>, <b>candidatos</b> e <b>profissionais</b>.
-        Empresas publicam vagas e recebem <b>matches qualificados</b> em minutos.  
-        Profissionais podem <b>buscar oportunidades</b>, <b>se capacitar</b>, usar o <b>Bem+Match</b>, fazer <b>networking</b>
-        e acompanhar tendências do mercado.
+        O <b>MatchWork</b> conecta <b>empresas</b>, <b>candidatos em busca ativa</b> e <b>profissionais já empregados</b>.
+        Empresas publicam vagas e recebem <b>matches qualificados</b>. Profissionais podem <b>buscar oportunidades</b>, <b>se capacitar</b>, usar o <b>Bem+Match</b> e acompanhar tendências do <b>mercado</b>.
       </p>
-      <div style="display:flex;gap:10px;flex-wrap:wrap">
-        <a class="btn primary" href="#planos">Sou empresa</a>
-        <a class="btn ghost" href="#planos">Sou candidato</a>
+      <div style="display:flex;gap:10px;flex-wrap:wrap;justify-content:center">
+        <a class="btn primary" href="#planos-empresas">Sou empresa</a>
+        <a class="btn ghost" href="#planos-candidato">Sou candidato</a>
       </div>
     </div>
-    <div class="mockup"><img src="assets/mockup.PNG" alt="Mockup MatchWork"></div>
+    <div class="mockup"><img src="assets/mockup.PNG" alt="Mockup app"></div>
   </div>
 </header>
 
@@ -162,9 +167,8 @@ footer a:hover{color:#fff}
 <section id="como-funciona" class="section">
   <div class="container">
     <h2>Como funciona</h2>
-    <p class="sub">Um fluxo único que atende empresas e profissionais.</p>
     <div class="grid-3">
-      <div class="card"><h3>1) Cadastro</h3><p>Perfil completo, testes e publicação de vagas.</p></div>
+      <div class="card"><h3>1) Cadastro</h3><p>Perfil completo, testes e vagas.</p></div>
       <div class="card"><h3>2) Matching & Evolução</h3><p>Recomendações, trilhas e Bem+Match.</p></div>
       <div class="card"><h3>3) Resultados</h3><p>Contratações rápidas e profissionais preparados.</p></div>
     </div>
@@ -175,9 +179,8 @@ footer a:hover{color:#fff}
 <section id="bemplus" class="band section">
   <div class="container">
     <h2>Bem+Match</h2>
-    <p class="sub">Bem-estar e apoio emocional integrados à jornada profissional.</p>
     <div class="grid-2">
-      <div class="card"><h3>Para profissionais</h3><p>Conteúdos e grupos de apoio para equilíbrio emocional.</p></div>
+      <div class="card"><h3>Para profissionais</h3><p>Conteúdos e apoio para equilíbrio emocional.</p></div>
       <div class="card"><h3>Para empresas</h3><p>Candidatos mais preparados e engajados.</p></div>
     </div>
   </div>
@@ -186,44 +189,46 @@ footer a:hover{color:#fff}
 <!-- PLANOS -->
 <section id="planos" class="section">
   <div class="container">
-    <h2>Planos para empresas e candidatos</h2>
-    <p class="sub">Escolha o formato ideal. Sem burocracia, sem multa escondida.</p>
-    <div class="plan-box">
-      <div class="plan">
-        <h3>Gratuito</h3>
-        <div class="price">R$ 0</div>
-        <ul><li>1 vaga ativa</li><li>5 perfis sugeridos</li><li>7 dias de duração</li></ul>
-        <a class="btn ghost" href="#contato">Começar</a>
-      </div>
-      <div class="plan" style="border:2px solid var(--brand)">
-        <h3>One-Shot</h3>
-        <div class="price">R$ 400 / vaga</div>
-        <ul><li>1 vaga até ser preenchida</li><li>Perfis ilimitados</li><li>Contato completo</li></ul>
-        <a class="btn primary" href="#contato">Contratar</a>
-      </div>
-      <div class="plan">
-        <h3>Assinatura</h3>
-        <div class="price">R$ 150/mês</div>
-        <ul><li>Vagas ilimitadas</li><li>Banco de talentos</li><li>Perfis ilimitados</li></ul>
-        <a class="btn ghost" href="#contato">Assinar</a>
-      </div>
-      <div class="plan">
-        <h3>Premium Candidato</h3>
-        <div class="price">R$ 14,90/mês</div>
-        <ul><li>Destaque nas vagas</li><li>Relatório de carreira</li><li>Acesso prioritário</li></ul>
-        <a class="btn primary" href="#contato">Assinar</a>
-      </div>
+    <h2>Planos focados em preencher vagas e evoluir carreiras</h2>
+    <p class="sub">Escolha o formato ideal. Sem burocracia.</p>
+    <div class="plan-note">Plano Gratuito para Empresas: 1 vaga por 7 dias, até 5 perfis sugeridos.</div>
+
+    <!-- Empresas -->
+    <div id="planos-empresas" class="table-box">
+      <h3>Planos para empresas</h3>
+      <table class="compare">
+        <thead><tr><th>Recursos</th><th>Gratuito</th><th>One-Shot</th><th>Assinatura</th></tr></thead>
+        <tbody>
+          <tr><td>Vagas ativas</td><td>1</td><td>1</td><td>Ilimitadas</td></tr>
+          <tr><td>Perfis & contato</td><td>5 • parcial</td><td>Ilimitados • completo</td><td>Ilimitados • completo</td></tr>
+          <tr><td>Banco de Talentos</td><td>—</td><td>—</td><td>Incluso</td></tr>
+          <tr class="price-row"><td>Preço</td><td>R$ 0</td><td>R$ 400 / vaga</td><td>R$ 150/mês</td></tr>
+        </tbody>
+      </table>
+    </div>
+
+    <!-- Candidatos -->
+    <div id="planos-candidato" class="table-box">
+      <h3>Planos para candidatos</h3>
+      <table class="compare">
+        <thead><tr><th>Recursos</th><th>Gratuito</th><th>Premium</th></tr></thead>
+        <tbody>
+          <tr><td>Acesso a vagas</td><td>Incluso</td><td>Prioritário</td></tr>
+          <tr><td>Destaque</td><td>—</td><td>Sim</td></tr>
+          <tr><td>Relatório de carreira</td><td>—</td><td>Completo</td></tr>
+          <tr class="price-row"><td>Preço</td><td>R$ 0</td><td>R$ 14,90/mês</td></tr>
+        </tbody>
+      </table>
     </div>
   </div>
 </section>
 
 <!-- SEGURANÇA -->
-<section class="section band">
+<section class="section">
   <div class="container">
     <h2>Segurança e conformidade</h2>
-    <p class="sub">O MatchWork segue a <b>LGPD</b> e mantém dados em ambiente seguro.</p>
     <div class="grid-2">
-      <div class="card"><h3>Para empresas</h3><p>Proteção de dados sensíveis e relatórios seguros.</p></div>
+      <div class="card"><h3>Para empresas</h3><p>Proteção de dados e relatórios seguros.</p></div>
       <div class="card"><h3>Para candidatos</h3><p>Dados usados apenas para matching, nunca vendidos.</p></div>
     </div>
   </div>
@@ -233,7 +238,7 @@ footer a:hover{color:#fff}
 <section id="contato" class="section">
   <div class="container">
     <h2 style="text-align:center">Fale com a gente</h2>
-    <form action="https://formsubmit.co/contato@appmatchwork.com.br" method="POST">
+    <form action="https://formsubmit.co/contato@appmatchwork.com.br" method="POST" class="form">
       <input class="input" name="nome" placeholder="Seu nome" required>
       <input class="input" type="email" name="email" placeholder="E-mail" required>
       <select class="input" name="perfil" required>
@@ -250,18 +255,19 @@ footer a:hover{color:#fff}
 
 <!-- FOOTER -->
 <footer>
-  <p>© 2025 MatchWork — Indaial/SC • <a href="terms.html">Termos</a> • <a href="privacy.html">Privacidade</a></p>
-  <p>
-    <a href="https://www.instagram.com/matchwork.oficial" target="_blank">Instagram</a> •
+  © 2025 MatchWork — Indaial/SC • 
+  <a href="terms.html">Termos</a> • <a href="privacy.html">Privacidade</a>
+  <div class="social-icons">
+    <a href="https://www.instagram.com/matchwork.oficial" target="_blank">Instagram</a> • 
     <a href="https://www.linkedin.com/company/matchworkoficial/" target="_blank">LinkedIn</a>
-  </p>
+  </div>
 </footer>
 
 <script>
+/* Menu mobile */
 const toggle=document.querySelector('.menu-toggle'),links=document.querySelector('.nav-links');
 if(toggle&&links){
-  toggle.addEventListener('click',()=>{const open=links.classList.toggle('open');toggle.setAttribute('aria-expanded',open?'true':'false')});
-  links.querySelectorAll('a').forEach(a=>a.addEventListener('click',()=>{links.classList.remove('open');toggle.setAttribute('aria-expanded','false')}))
+  toggle.addEventListener('click',()=>{links.classList.toggle('open');});
 }
 </script>
 </body>
